# transformers-intro

./: .gitignore  README.md  pyproject.toml
src/: dataloader.py  device.py  main.py  model.py  parameters.py  plots.py  train.py
src/dataloader/: __init__.py  dataloader.py  tokenizer.py
src/model/: __init__.py  coder.py  decoder.py  embedding.py  encoder.py  positional_encoder.py  positional_encoding.py  transformer.py
src/torch_training/: dataloader.py  trainer.py
src/trainer/: trainer.py
src/utils/: __init__.py  count_parameters.py
