[tool.poetry]
name = "transformers-intro"
version = "0.1.0"
description = ""
authors = ["Federico Visintini <federico.visintini@sns.it>"]
readme = "README.md"
packages = [{include = "transformers_intro"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
numpy = "^1.24.3"
datasets = "^2.12.0"
transformers = "^4.29.2"
seaborn = "^0.12.2"
tensorboard = "^2.13.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
